; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_options.c_options_string_version.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_options.c_options_string_version.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gc_arena = type { i32 }
%struct.buffer = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @options_string_version(i8* %0, %struct.gc_arena* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.gc_arena*, align 8
  %5 = alloca %struct.buffer, align 4
  store i8* %0, i8** %3, align 8
  store %struct.gc_arena* %1, %struct.gc_arena** %4, align 8
  %6 = load %struct.gc_arena*, %struct.gc_arena** %4, align 8
  %7 = call i32 @alloc_buf_gc(i32 4, %struct.gc_arena* %6)
  %8 = getelementptr inbounds %struct.buffer, %struct.buffer* %5, i32 0, i32 0
  store i32 %7, i32* %8, align 4
  %9 = call i64 @BPTR(%struct.buffer* %5)
  %10 = inttoptr i64 %9 to i8*
  %11 = load i8*, i8** %3, align 8
  %12 = call i32 @strncpynt(i8* %10, i8* %11, i32 3)
  %13 = call i8* @BSTR(%struct.buffer* %5)
  ret i8* %13
}

declare dso_local i32 @alloc_buf_gc(i32, %struct.gc_arena*) #1

declare dso_local i32 @strncpynt(i8*, i8*, i32) #1

declare dso_local i64 @BPTR(%struct.buffer*) #1

declare dso_local i8* @BSTR(%struct.buffer*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
